tests/error/comptime/check_dereference15.bz
// error: invalid memory access of an object of type 'i32'
// note: while evaluating expression at compile time
// note: lifetime of the stack object has already ended
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		mut s = [: i32]();
		{
			let arr = [1: i32]();
			s = arr;
		}
		s[0];
	});
}
